Add Phase 3.5a: AI review summary powered by Claude
- AiService interface + ClaudeAiService calling Anthropic REST API
  (no SDK dependency — uses existing RestTemplate with 15s timeout bean)
- ReviewSummaryService: fetches TMDB reviews + own DB reviews,
  calls Claude, caches result 48h in Redis (free/full keys per tmdbId)
- GET /api/ai/review-summary/{tmdbId}?type=&spoilers= — public endpoint
- Requires min 3 reviews; returns null (not 500) when AI unavailable
- Frontend: ReviewSummaryCard with lazy "Generate" trigger, spoiler-free
  / full toggle, blur + reveal overlay for full mode
- Fix WatchlistServiceTest: add missing ApplicationEventPublisher +
  OTTAvailabilityService mocks, update tests to match current service

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>